<resources>
    <string name="app_name">FoodOrderingApp</string>

    <string name="detailDescription">Burger with extra cheese</string>

    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Not_Register">Not Register</string>
</resources>